JG-2007-06-21-0: Enhancem.: New test bugs/issuezilla/2300.
                 Review:    RD

JG-2007-06-14-0: Bugfix:    submit_job was broken for Grid Engine 6.1.
                 Review:    RD

AP-2007-06-13-0: Enhancem.: o Added function get_additional_config_file_path for
                              the additional checktrees.
                            o Set $GE_ROOT and SGE_CELL env. variables for
                              arcorun
                 Bugfix:    o ARCo install - revoke privileges before dropping
                              users for mysql database
                            o Added missing copyright
                 Changed:   file_procedures.tcl, arcorun.tcl, checktree.tcl for
                            arco and hedeby, arco install check.exp

JG-2007-06-13-0: Bugfix:    Fixed CSP negative tests for 6.0.
                 Review:    RD

RD-2007-06-11-0: Bugfix:    Added qrdel test
                 Review:    PJ

RD-2007-06-06-0: Bugfix:    fixed qdel gvim parsing
                 Review:    CR

RD-2007-06-04-0: Enhancem.: Enhanced advance reservation test
                 Review:    AA

PJ-2007-06-01-0: Enhancem.: Improving the test usage of time limits
                            Adding one test to advance_reservation
                            Making the test outputs more readable
                 Review:    JG
                 
JG-2007-06-01-0: Enhancem.: Made shadowd_migrate test more fault tolerant 
                            to slow NFS.
                 Review:    CR

JG-2007-05-30-0: Bugfix:    Fixed bugs/issuezilla/1104 with Gridengine 6.0u??.
                            Improved error handling for calendar deletion.
                 Review:    CR

JG-2007-05-29-1: Bugfix:    Fixed qsub/override test, fixed AR handling in 
                            multiple modules, improved error output in 
                            bugs/issuezilla/440
                 Review:    RD
