@@ -1,3 +1,8 @@
+RN-2007-06-21-0: Bugfix:    qconf -sq all.q@myhost or all.q@@allhosts produces no value at all for complex_values (not even NONE)
+			    modified qconf test for testing o/p of qconf -sq queue@host
+		 Issue :    2307 
+                 Review:    JG
+
 JG-2007-06-21-0: Enhancem.: New test bugs/issuezilla/2300.
                  Review:    RD
 
